# youtube-competitor-tracker

./: .env.example  .gitignore  AGENTS.md  README.md  channels.txt  config.json  pyproject.toml  starter_prompt_codex_plan.md
.github/workflows/: manage-channels.yml  sync.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_viral_score_to_videos.py  fd84ea383582_initial_schema.py
docs/: schema-and-sync.md
src/youtube_competitor_tracker/: __init__.py  __main__.py  config.py  exceptions.py  logging.py  scheduler.py
src/youtube_competitor_tracker/cli/: __init__.py  app.py
src/youtube_competitor_tracker/db/: __init__.py  base.py  migrations.py  session.py
src/youtube_competitor_tracker/models/: __init__.py  channel.py  enums.py  mixins.py  snapshot.py  sync_run.py  video.py
src/youtube_competitor_tracker/services/: __init__.py  channels.py  viral_score.py
src/youtube_competitor_tracker/sync/: __init__.py  service.py
src/youtube_competitor_tracker/utils/: datetime.py  youtube.py
src/youtube_competitor_tracker/youtube/: __init__.py  client.py  schemas.py
tests/: conftest.py  test_cli.py  test_config.py  test_sync_service.py  test_viral_score.py  test_youtube_client.py
