[project]
name = "youtube-competitor-tracker"
version = "0.1.0"
description = "Local-first YouTube channel and video ingestion foundation."
readme = "README.md"
authors = [
    { name = "fatihkarahan", email = "sekanti02@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.10",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "typer>=0.24.1",
]

[project.scripts]
youtube-competitor-tracker = "youtube_competitor_tracker.cli.app:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["youtube_competitor_tracker"]
